[package]
name = "enignee"
version = "0.1.0"
edition = "2021"
authors = ["zzj01262022@163.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.14.0"
# the gfx version = 0.14.0,you should find it's in https://docs.rs/gfx/0.14.0/gfx/macro.gfx_defines.html
gfx_text = "0.31.0"
gfx_window_glutin = "0.31.0"
glutin = "0.30.9"

[[bin]]
name = "main"
path = "bin/main.rs"
